[gd_scene load_steps=2 format=3 uid="uid://ytsxet2k47lj"]

[ext_resource type="Script" path="res://addons/godot-xr-tools/user_settings/user_settings_ui.gd" id="1"]

[node name="UserSettingsUI" type="TabContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
script = ExtResource("1")

[node name="Input" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="SnapTurning" type="HBoxContainer" parent="Input"]
offset_right = 106.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="Input/SnapTurning"]
offset_top = 2.0
offset_right = 78.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
text = "Snap turning:"

[node name="SnapTurningCB" type="CheckBox" parent="Input/SnapTurning"]
offset_left = 82.0
offset_right = 106.0
offset_bottom = 24.0

[node name="HSeparator" type="HSeparator" parent="Input"]
offset_top = 28.0
offset_right = 106.0
offset_bottom = 32.0

[node name="Buttons" type="HBoxContainer" parent="Input"]
offset_top = 36.0
offset_right = 106.0
offset_bottom = 61.0
alignment = 1

[node name="Save" type="Button" parent="Input/Buttons"]
offset_left = 10.0
offset_right = 51.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Apply"

[node name="Reset" type="Button" parent="Input/Buttons"]
offset_left = 55.0
offset_right = 96.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Reset"

[node name="Player" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerHeight" type="HBoxContainer" parent="Player"]
offset_right = 106.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Player/PlayerHeight"]
offset_right = 81.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 12
text = "Height adjust:"

[node name="PlayerHeightSlider" type="HSlider" parent="Player/PlayerHeight"]
offset_left = 85.0
offset_right = 93.0
offset_bottom = 16.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.1

[node name="PlayerHeightCalc" type="HBoxContainer" parent="Player"]
offset_top = 24.0
offset_right = 106.0
offset_bottom = 49.0

[node name="Label" type="Label" parent="Player/PlayerHeightCalc"]
offset_top = 4.0
offset_right = 1.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 12

[node name="PlayerHeightStandard" type="Button" parent="Player/PlayerHeightCalc"]
offset_left = 5.0
offset_right = 102.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Set to standard"

[node name="HSeparator" type="HSeparator" parent="Player"]
offset_top = 53.0
offset_right = 106.0
offset_bottom = 57.0

[node name="Buttons" type="HBoxContainer" parent="Player"]
offset_top = 61.0
offset_right = 106.0
offset_bottom = 86.0
alignment = 1

[node name="Save" type="Button" parent="Player/Buttons"]
offset_left = 10.0
offset_right = 51.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Apply"

[node name="Reset" type="Button" parent="Player/Buttons"]
offset_left = 55.0
offset_right = 96.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 12
text = "Reset"

[connection signal="pressed" from="Input/SnapTurning/SnapTurningCB" to="." method="_on_SnapTurningCB_pressed"]
[connection signal="pressed" from="Input/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Input/Buttons/Reset" to="." method="_on_Reset_pressed"]
[connection signal="drag_ended" from="Player/PlayerHeight/PlayerHeightSlider" to="." method="_on_PlayerHeightSlider_drag_ended"]
[connection signal="pressed" from="Player/PlayerHeightCalc/PlayerHeightStandard" to="." method="_on_PlayerHeightStandard_pressed"]
[connection signal="pressed" from="Player/Buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Player/Buttons/Reset" to="." method="_on_Reset_pressed"]
